--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,29 +2,28 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="133"
+    android:viewportHeight="103">
+  <group android:scaleX="0.35"
+      android:scaleY="0.27105263"
+      android:translateX="43.225"
+      android:translateY="37.54079">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M118.68,30.81C115.83,26.81 106.05,19.85 96.49,23.96C93.64,14.26 80.78,-2.75 52.1,6.84C33.4,13.09 26.02,22.83 24.57,31.23C23.24,38.93 34.07,48.18 36.73,40.84C37.39,39.03 37.5,36.36 36.73,32.52M16.25,32.52C8.28,36.51 -3.9,48.61 11.13,65.05M31.61,71.89C33.89,67.33 36.39,58.2 28.2,58.2C17.95,58.2 12.83,70.18 24.78,77.03C34.34,82.51 46.98,79.31 52.1,77.03M84.54,70.18C89.09,67.9 97.85,60.94 96.49,51.35C94.78,39.37 84.54,42.79 79.41,47.93C75.43,43.93 66.1,38.68 60.63,49.64C53.81,63.33 74.29,89.02 94.78,90.73C115.26,92.44 123.8,97.58 125.51,101M118.68,47.93C115.26,50.78 107.75,54.43 105.02,46.21C101.61,35.94 122.09,34.23 127.21,46.21C132.34,58.2 127.21,77.03 101.61,73.61"
+        android:strokeWidth="8"
+        android:fillColor="#00000000">
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="66.5"
+            android:startY="4"
+            android:endX="66.5"
+            android:endY="101"
+            android:type="linear">
+          <item android:offset="0.21" android:color="#FF81CBBF"/>
+          <item android:offset="0.49" android:color="#FF89D5C9"/>
+          <item android:offset="1" android:color="#FFB8E2DE"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
